fix selection on items not showing up in tile window

--- a/sprite-test/style.css
+++ b/sprite-test/style.css
@@ -397,7 +397,7 @@ button:not(.no-make-style) {
         outline-offset 200ms ease-out;
     }
     
-    &.selected {
+    &.toggled {
         transition: outline 0ms, outline-offset 0ms;
         outline: var(--border);
         outline-offset: 5px;
